test/syntax/fail/integer_too_large.sync
let f x = 4444444444444444444444444444444444
